--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     </header>
 
-    <main class="container-fluid text-center">
+    <main class="container text-center">
 
         <!-- SECTION - Total Scores -->
         <section class="row mb-3">
